--- a/NUFSCar/app/src/main/res/values/strings.xml
+++ b/NUFSCar/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">NUFSCar</string>
     <string name="search">Busca</string>
+    <string name="title_activity_events">Events</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
